# guiml

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  gui.xml  pyproject.toml  requirements.txt  styles.yml  test.py  todos_and_notes.md
docs/source/: components.rst  conf.py  index.rst  injectables.rst  layout.rst  tutorial.rst
examples/hello_world/: __main__.py  templates.xml
examples/layouts/: __main__.py  root.xml  styles.yml  templates.xml
examples/todolist/: __main__.py  resources.py  root.xml  styles.yml  templates.xml  todo.py  todo.xml  todolist.py  todolist.xml
guiml/: _components.py  components.py  core.py  filecache.py  injectables.py  layout.py  plugins.py  registry.py  resources.py  transformer.py
guimlcomponents/base/: __init__.py  cairocffi_to_pycairo.py  components.py  container.py  image.py  injectables.py  layout.py  properties.py  shared.py  styles.yml  text.py  window.py
src/guiml/: _components.py  components.py  core.py  plugins.py  resources.py
src/guimlcomponents/base/: __init__.py  image.py  layout.py  styles.yml  window.py
src/guimlcomponents/base/cairocffi_to_pycairo/: LICENSE  __init__.py
tests/: test_core.py  test_index_conversion.py  test_injectables.py
