[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE", "guimlcomponents/base/cairocffi_to_pycairo/LICENSE"]

[tool.setuptools.packages.find]
include = ["guiml", "guimlcomponents.*"]
namespaces = true

[project]
name = "guiml"
version = "0.1.0"
authors = [
  { name="Stephan Gocht", email="gocht@mailbox.org" },
]
description = "An xml based GUI framework with property binding and dependency injection."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
    "pyglet",
    "pycairo < 1.17",
    "cairocffi",
    "pangocffi",
    "pangocairocffi",
]

[project.urls]
Homepage = "https://github.com/StephanGocht/guiml"
Issues = "https://github.com/StephanGocht/guiml/issues"
Documentation = "http://guiml.readthedocs.io/"